--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+credentials.json
+service_account.json
+.streamlit/secrets.toml
+client_secret.json
+token.json
